# HallMonitor

./: .gitignore  README.md  index.html  package-lock.json  package.json  pip.html  vite.config.ts
.github/workflows/: build.yml
scripts/: download-sidecars.mjs
src/: App.css  App.tsx  pip-main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: go2rtc.rs  lib.rs  main.rs  media.rs  recording.rs  settings.rs  sidecar.rs  tapo.rs  tapo_camera.rs
src/components/: CameraGrid.tsx  CameraView.tsx  ControlIcons.tsx  ControlSidebar.tsx  MediaGallery.tsx  SettingsPanel.tsx
src/hooks/: useDigitalZoom.ts  useGo2RtcStream.ts
