[package]
name = "hall-monitor"
version = "0.1.0"
description = "HallMonitor - Tapo camera desktop app"
authors = ["you"]
edition = "2021"

[lib]
name = "hall_monitor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
parking_lot = "0.12"
chrono = { version = "0.4", features = ["serde"] }
urlencoding = "2"
tokio = { version = "1", features = ["time", "sync", "rt"] }
tapo = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls"] }
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
md-5 = "0.10"
sha2 = "0.10"
base64 = "0.22"
rand = "0.9"
anyhow = "1"
